# agenttoolbench-code

./: .gitignore  README.md  package-lock.json  pyproject.toml
.claude-plugin/: plugin.json
agenttoolbench/: __init__.py  cli.py  layer_attribution.py  leaderboard.py  oracle.py  orchestrator.py  results.py  sandbox.py  schema.py
agenttoolbench/adapters/: aider.py  base.py  claude_code.py  codex_cli.py  openhands.py  stub.py  swe_agent.py
agenttoolbench/runtime/: guard.py
agenttoolbench/runtime/rules/: net_rfc1918.py  npm_install.py  (+3 more)
docs/: launch-copy-draft.md  launch-post-draft.md
examples/: aider-sonnet-16.jsonl  aider-sonnet-N3.jsonl  claude-code-first-run.jsonl  claude-code-haiku-16.jsonl  claude-code-haiku-N3.jsonl  claude-code-haiku-run.jsonl  claude-code-sonnet-16.jsonl  claude-code-sonnet-N3.jsonl  claude-code-sonnet-bare-N1.jsonl  codex-cli-gpt4o-mini-N1.jsonl  codex-cli-gpt5-codex-N1.jsonl
hooks/: hooks.json  pre-tool-use.sh
schema/: result.schema.json  scenario.schema.json
site/: index.html
skills/guard/: SKILL.md
tests/: test_claude_code_adapter.py  test_cmd_inj_scenario.py  test_codex_aider_adapters.py  test_layer_attribution.py  test_leaderboard.py  test_multi_run_aggregation.py  test_openhands_adapter.py  test_oracle_v002_rubric.py  test_oracle_v003_rubric.py  test_oracle_v004_rubric.py  test_orchestrator.py  test_run_all.py  test_swe_agent_adapter.py
tests/runtime/: test_guard_main.py  test_net_rfc1918_rule.py  test_npm_install_rule.py  test_pip_install_rule.py  test_shell_with_file_content_rule.py  test_subagent_burst_rule.py
(+73 files in other folders)
