[project]
name = "agenttoolbench-code"
version = "0.0.1"
description = "Benchmarking silent security failures in AI coding agents."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Allen Wu" }]
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
agenttoolbench = "agenttoolbench.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agenttoolbench*"]
